# monitoring

./: .env.lang  .gitignore  .gitmessage.txt  CHANGELOG.md  Dockerfile  Makefile  package-lock.json  package.json  pyproject.toml  run.py  version.txt
app/api/v1/: base_api.py
app/bot/: __init__.py  decorators.py
app/bot/fsm-storage/: storage.db
app/bot/handlers/: __init__.py  admin.py  callbacks.py  commands.py  for_groups.py  massages.py  states_handlers.py
app/bot/keyboards/: admin_inline.py  inline.py
app/bot/middlewares/: __init__.py  logging.py  throttling.py
app/bot/states/: send_message.py
app/bot/utils/: tools.py
app/bot/webhooks/: handlers.py
app/core/: config.py  middlewares.py
app/db/dao/: base_dao.py  user.py
app/db/migrations/: env.py
app/db/models/: associations.py  base_sql.py  enums.py  tables.py
app/db/schemas/: base_schemas.py  user.py
app/db/sessions/: __init__.py  _session.py  utils.py
app/docs/: load_docs.py  responses_variants.py
app/docs/descriptions/: api_description_dev.md  api_description_prod.md
app/frontend/static/: main.js
app/frontend/templates/: error.html  index.html  reset_password.html  success.html  swagger_login.html
app/monitoring/: __init__.py  config_resolver.py  config_runtime.py  onvif_client.py  pipeline.py  run_monitor.py
app/monitoring/capture/: rtsp_capture.py
app/monitoring/config/: cameras.yaml
app/monitoring/detection/: plate_detector.py
app/monitoring/display/: publisher.py
app/monitoring/recognition/: ocr_recognizer.py
app/monitoring/roi/: masks.py
app/monitoring/utils/: regexes.py
app/services/cache/: obj_cache.py
app/services/celery/: __init__.py  tasks.py
app/services/mail_sender/: notifier.py
app/services/s3/: __init__.py  (+1 more)
app/utils/: http_exceptions.py  logger.py  reg_exceptions.py
deploy/: compose.back.monitoring.app.dev.yml  compose.back.monitoring.full.dev.yml  compose.back.monitoring.pstgr.dev.yml  compose.infrastructure.dev.yml
scripts/: tree_for_readme.txt
(+9 files in other folders)
